Source/ISS/Development/CommonInterfaceControlLayer/Cicl_Devices/AtxmlLE1553_5/Vendor/Include/BTI1553NET.CS

            [DllImport("BTI155364.DLL", EntryPoint = "BTI1553_ChIsRM", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI1553_ChIsRM(Int32 channum, IntPtr handleval);
            [DllImport("BTI155364.DLL", EntryPoint = "BTI1553_ChIsS", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI1553_ChIsS(Int32 channum, IntPtr handleval);
            [DllImport("BTI155364.DLL", EntryPoint = "BTI1553_ChIsX", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI1553_ChIsX(Int32 channum, IntPtr handleval);
            [DllImport("BTI155364.DLL", EntryPoint = "BTI1553_ChStart", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI1553_ChStart(Int32 channum, IntPtr handleval);
            [DllImport("BTI155364.DLL", EntryPoint = "BTI1553_ChStop", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI1553_ChStop(Int32 channum, IntPtr handleval);
            [DllImport("BTI155364.DLL", EntryPoint = "BTI1553_CmdMaxLoopRd", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt16 BTI1553_CmdMaxLoopRd(Int32 channum, IntPtr handleval);
            [DllImport("BTI155364.DLL", EntryPoint = "BTI1553_CmdMaxLoopWr", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTI1553_CmdMaxLoopWr(UInt16 countval, Int32 channum, IntPtr handleval);
            [DllImport("BTI155364.DLL", EntryPoint = "BTI1553_CmdShotRd", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI1553_CmdShotRd(Int32 index, Int32 channum, IntPtr handleval);
            [DllImport("BTI155364.DLL", EntryPoint = "BTI1553_CmdShotWr", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI1553_CmdShotWr(Int32 value, Int32 index, Int32 channum, IntPtr handleval);
            [DllImport("BTI155364.DLL", EntryPoint = "BTI1553_CmdSkipRd", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI1553_CmdSkipRd(Int32 index, Int32 channum, IntPtr handleval);
            [DllImport("BTI155364.DLL", EntryPoint = "BTI1553_CmdSkipWr", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI1553_CmdSkipWr(Int32 value, Int32 index, Int32 channum, IntPtr handleval);
            [DllImport("BTI155364.DLL", EntryPoint = "BTI1553_CmdStepRd", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI1553_CmdStepRd(Int32 index, Int32 channum, IntPtr handleval);
            [DllImport("BTI155364.DLL", EntryPoint = "BTI1553_CmdStepWr", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI1553_CmdStepWr(Int32 value, Int32 index, Int32 channum, IntPtr handleval);
            [DllImport("BTI155364.DLL", EntryPoint = "BTI1553_ErrorCtrl", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI1553_ErrorCtrl(UInt32 ctrlval, Int32 channum, IntPtr handleval);
            [DllImport("BTI155364.DLL", EntryPoint = "BTI1553_ErrorDefine", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI1553_ErrorDefine(UInt32 defineval, UInt16 errvalue, Int32 countval, UInt16 wordpos, UInt16 bitpos, Int32 channum, IntPtr handleval);
            [DllImport("BTI155364.DLL", EntryPoint = "BTI1553_ErrorSent", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI1553_ErrorSent(Int32 channum, IntPtr handleval);
            [DllImport("BTI155364.DLL", EntryPoint = "BTI1553_ErrorTagBC", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI1553_ErrorTagBC(Int32 tagval, UInt32 msgaddr, Int32 channum, IntPtr handleval);
            [DllImport("BTI155364.DLL", EntryPoint = "BTI1553_ErrorTagRT", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI1553_ErrorTagRT(Int32 tagval, Int32 mcflag, Int32 taval, Int32 trflag, Int32 saval, Int32 channum, IntPtr handleval);
            [DllImport("BTI155364.DLL", EntryPoint = "BTI1553_ErrorTriggerDefine", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI1553_ErrorTriggerDefine(Int32 enableflag, UInt16 trigmask, UInt16 trigval, UInt16 pinpolarity, Int32 channum, IntPtr handleval);
            [DllImport("BTI155364.DLL", EntryPoint = "BTI1553_ListBlockRd", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTI1553_ListBlockRd(UInt16[] buf, UInt32 listaddr, IntPtr handleval);
            [DllImport("BTI155364.DLL", EntryPoint = "BTI1553_ListBlockWr", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTI1553_ListBlockWr(UInt16[] buf, UInt32 listaddr, IntPtr handleval);
            [DllImport("BTI155364.DLL", EntryPoint = "BTI1553_ListDataRd", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI1553_ListDataRd(UInt16[] buf, Int32 count, UInt32 listaddr, IntPtr handleval);
            [DllImport("BTI155364.DLL", EntryPoint = "BTI1553_ListDataWr", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI1553_ListDataWr(UInt16[] buf, Int32 count, UInt32 listaddr, IntPtr handleval);
            [DllImport("BTI155364.DLL", EntryPoint = "BTI1553_ListMultiBlockRd", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI1553_ListMultiBlockRd(UInt16[] buf, ref Int32 blkcountptr, UInt32 listaddr, IntPtr handleval);
            [DllImport("BTI155364.DLL", EntryPoint = "BTI1553_ListMultiBlockWr", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI1553_ListMultiBlockWr(UInt16[] buf, Int32 blkcount, UInt32 listaddr, IntPtr handleval);
            [DllImport("BTI155364.DLL", EntryPoint = "BTI1553_MonConfig", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI1553_MonConfig(UInt32 configval, Int32 channum, IntPtr handleval);
            [DllImport("BTI155364.DLL", EntryPoint = "BTI1553_MonFilterSA", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI1553_MonFilterSA(Int32 taval, UInt32 rcvsamask, UInt32 xmtsamask, UInt32 rcvmcmask, UInt32 xmtmcmask, Int32 channum, IntPtr handleval);
            [DllImport("BTI155364.DLL", EntryPoint = "BTI1553_MonFilterTA", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI1553_MonFilterTA(UInt32 tamask, Int32 channum, IntPtr handleval);
            [DllImport("BTI155364.DLL", EntryPoint = "BTI1553_MsgBlockRd", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTI1553_MsgBlockRd(ref MSGFIELDS1553 buf, UInt32 msgaddr, IntPtr handleval);
            [DllImport("BTI155364.DLL", EntryPoint = "BTI1553_MsgBlockWr", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTI1553_MsgBlockWr(ref MSGFIELDS1553 buf, UInt32 msgaddr, IntPtr handleval);
            [DllImport("BTI155364.DLL", EntryPoint = "BTI1553_MsgDataRd", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTI1553_MsgDataRd(UInt16[] buf, Int32 count, UInt32 msgaddr, IntPtr handleval);
            [DllImport("BTI155364.DLL", EntryPoint = "BTI1553_MsgDataWr", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTI1553_MsgDataWr(UInt16[] buf, Int32 count, UInt32 msgaddr, IntPtr handleval);
            [DllImport("BTI155364.DLL", EntryPoint = "BTI1553_MsgFieldRd", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTI1553_MsgFieldRd(UInt16 fieldtype, UInt32 msgaddr, IntPtr handleval);
            [DllImport("BTI155364.DLL", EntryPoint = "BTI1553_MsgFieldWr", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTI1553_MsgFieldWr(UInt32 fieldval, UInt16 fieldtype, UInt32 msgaddr, IntPtr handleval);
            [DllImport("BTI155364.DLL", EntryPoint = "BTI1553_MsgGroupRd", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTI1553_MsgGroupRd(Int32 nummsgs, [In, Out, MarshalAs(UnmanagedType.LPArray, SizeParamIndex = 0)] MSGFIELDS1553[] msgflds, UInt32[] msgaddrptr, IntPtr handleval);
            [DllImport("BTI155364.DLL", EntryPoint = "BTI1553_MsgGroupWr", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTI1553_MsgGroupWr(Int32 nummsgs, [In, Out, MarshalAs(UnmanagedType.LPArray, SizeParamIndex = 0)] MSGFIELDS1553[] msgflds, UInt32[] msgaddrptr, IntPtr handleval);
            [DllImport("BTI155364.DLL", EntryPoint = "BTI1553_MsgSkipRd", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI1553_MsgSkipRd(UInt32 msgaddr, IntPtr handleval);
            [DllImport("BTI155364.DLL", EntryPoint = "BTI1553_MsgSkipWr", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTI1553_MsgSkipWr(Int32 skip, UInt32 msgaddr, IntPtr handleval);
            [DllImport("BTI155364.DLL", EntryPoint = "BTI1553_MsgSyncDefine", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI1553_MsgSyncDefine(Int32 enableflag, UInt16 syncmask, UInt16 pinpolarity, UInt32 msgaddr, IntPtr handleval);
            [DllImport("BTI155364.DLL", EntryPoint = "BTI1553_MsgTriggerDefine", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI1553_MsgTriggerDefine(Int32 enableflag, UInt16 trigmask, UInt16 trigval, UInt16 pinpolarity, UInt32 msgaddr, IntPtr handleval);
            [DllImport("BTI155364.DLL", EntryPoint = "BTI1553_ParamAmplitudeConfig", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI1553_ParamAmplitudeConfig(UInt32 configval, UInt16 dacval, Int32 channum, IntPtr handleval);
            [DllImport("BTI155364.DLL", EntryPoint = "BTI1553_ParamAmplitudeGet", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI1553_ParamAmplitudeGet(ref UInt16 dacval, Int32 channum, IntPtr handleval);
            [DllImport("BTI155364.DLL", EntryPoint = "BTI1553_PlayConfig", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI1553_PlayConfig(UInt32 configval, UInt32 tamask, Int32 channum, IntPtr handleval);
            [DllImport("BTI155364.DLL", EntryPoint = "BTI1553_PlayStatus", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI1553_PlayStatus(Int32 channum, IntPtr handleval);
            [DllImport("BTI155364.DLL", EntryPoint = "BTI1553_PlayWr", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt16 BTI1553_PlayWr(UInt16[] buf, UInt16 bufcount, Int32 channum, IntPtr handleval);
